# django-performace-test

./: README.md  manage.py  pyproject.toml  runtests.sh
cmd/: run_server.sh
django_asgi/: asgi.py  settings.py  urls.py  wsgi.py
django_asgi/polls/: apps.py  urls.py  views.py
