[tool.poetry]
name = "django_asgi"
version = "0.1.0"
description = ""
authors = ["Alvie Zhang <alvie.zhang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.5"
gunicorn = "^20.0.4"
uvicorn = {version = "^0.13.3", extras = ["standard"]}
gevent = "^20.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
